--- a/NewApp/app/src/main/res/values/strings.xml
+++ b/NewApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <resources>
     <string name="app_name">NewApp</string>
+
+    <string-array name="Friends">
+        <item>Friend1</item>
+        <item>Friend2</item>
+        <item>Friend3</item>
+        <item>Friend4</item>
+        <item>Friend5</item>
+    </string-array>
 </resources>
