Funcoes basicas dos botoes

--- a/NewApp/app/src/main/res/values/strings.xml
+++ b/NewApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <resources>
     <string name="app_name">NewApp</string>
+    <string name="back">Back</string>
 
     <string-array name="Friends">
         <item>Friend1</item>
